added evaluation, conclusion and abstract

--- a/includes/references.bib
+++ b/includes/references.bib
@@ -49,6 +49,15 @@
     YEAR      = {2011}
 }
 
+@inproceedings{schein2002methods,
+  title={Methods and metrics for cold-start recommendations},
+  author={Schein, Andrew I and Popescul, Alexandrin and Ungar, Lyle H and Pennock, David M},
+  booktitle={Proceedings of the 25th annual international ACM SIGIR conference on Research and development in information retrieval},
+  pages={253--260},
+  year={2002},
+  organization={ACM}
+}
+
 @BOOK{segaran07,
     AUTHOR    = {Segaran, Toby},
     TITLE     = {Programming Collective Intelligence: Building Smart Web 2.0 Applications},
