--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,9 +1,5 @@
 \chapter{Conclusion \& Future Work}
 
-\emph{Status: Not Started}
+Recommender engines are usually tightly coupled to the application they are used in and very dependent on the data model as well as technical constraints of those applications. This project aimed to develop and evaluate a framework for integrating recommender engines into applications in a multi-purpose and loose-coupled manner. In order to demonstrate its capabilities, two fundamentally different recommender engines were implemented. Moreover, the framework and these recommender engines were integrated into the complex and popular e-commerce application Magento.
 
-\begin{itemize}
-\item Emphasis of other recommendation efforts
-\item This work with reference to its weaknesses from evaluation is still an fair approach?
-\item Usage in a high-traffic environment
-\end{itemize}
+Although the solution of this project met the objectives, the following things can be done in the scope of potential future work: First, the scalability and performance of the framework can be  further evaluated by deployment into a high-traffic production environment. Second, additional recommender engines, which ideally are renowned and used in production, can be integrated into the framework. A series of recommender engines available for the framework can lead to an ecosystem which would increase the attractiveness and usefulness of the framework as possible adopters would not only benefit from a best-practice architecture, but also ready-to-use recommender engines.
