--- a/meta/abstract.tex
+++ b/meta/abstract.tex
@@ -1,3 +1,3 @@
 \chapter*{Abstract}
 
-\emph{Status: Not Started. Last Step}
+This project aims to develop an integration framework for recommender engines which are systems providing personalised suggestions of useful items for a particular user relying on various filtering techniques. Traditionally, such systems are tightly coupled with domain applications leading to increased complexity and unmaintainable dependencies. The proposed solution intents to offer an alternative, loose-coupled approach. In order to demonstrate its capabilities, two recommender engines -- each relying on fundamentally different techniques, namely \emph{collaborative} and \emph{content-based} -- are to be implemented and linked to the framework. Then, the framework is to be integrated into the complex and popular e-commerce application \emph{Magento}.
